[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Topdown Shooter (620 assets)/Sample.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI Base Pack/PNG/blue_button00.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI Base Pack/PNG/green_button00.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Kenney Rocket.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://GUI/PantallaInicio.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "inicio"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Título:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Inicio:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -311.82, 505 ), Vector2( 35.0203, 505 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CargarPartida:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1024, 505 ), Vector2( 649.098, 505 ) ]
}

[node name="PantallaInicio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Título" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -382.0
margin_top = 50.0
margin_right = 382.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Título del juego (pendiente)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inicio" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -476.98
margin_top = -95.0
margin_right = -167.98
margin_bottom = -46.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Inicio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Iniciar juego"
align = 1
valign = 1

[node name="CargarPartida" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 137.098
margin_top = -95.0
margin_right = 468.11
margin_bottom = -46.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="CargarPartida"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Cargar partida"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "inicio"
anims/inicio = SubResource( 3 )

[connection signal="pressed" from="Inicio" to="." method="_on_Inicio_pressed"]
[connection signal="pressed" from="CargarPartida" to="." method="_on_CargarPartida_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
